# rpi_pico_lcd

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
